--- a/CardGameHelpers/CardGameHelpers.vbproj
+++ b/CardGameHelpers/CardGameHelpers.vbproj
@@ -100,5 +100,6 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
