--- a/CardGameHelpers/CardGameHelpers.vbproj
+++ b/CardGameHelpers/CardGameHelpers.vbproj
@@ -79,6 +79,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SQLHelpers\SqlAsyncHelper.vb" />
     <Compile Include="SQLHelpers\SqlHelper.vb" />
   </ItemGroup>
   <ItemGroup>
