--- a/CardGameConsoleUI/CardGameConsoleUI.vbproj
+++ b/CardGameConsoleUI/CardGameConsoleUI.vbproj
@@ -4,31 +4,35 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0177E435-2590-495A-BBB7-CBEEBD25C129}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>CardGameHelpers</RootNamespace>
-    <AssemblyName>CardGameHelpers</AssemblyName>
+    <ProjectGuid>{32D322F6-F22C-4CDB-8C17-5E6AE5C8310F}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <StartupObject>CardGameConsoleUI.Module1</StartupObject>
+    <RootNamespace>CardGameConsoleUI</RootNamespace>
+    <AssemblyName>CardGameConsoleUI</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>Windows</MyType>
+    <MyType>Console</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>CardGameHelpers.xml</DocumentationFile>
+    <DocumentationFile>CardGameConsoleUI.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>CardGameHelpers.xml</DocumentationFile>
+    <DocumentationFile>CardGameConsoleUI.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -46,6 +50,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -64,6 +69,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -79,8 +85,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="SQLHelpers\SqlAsyncHelper.vb" />
-    <Compile Include="SQLHelpers\SqlHelper.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -100,11 +104,16 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CardGameDataModels\CardGameDataModels.vbproj">
-      <Project>{17EF3CFB-46A5-4624-9EE7-64C8A71F799F}</Project>
+      <Project>{17ef3cfb-46a5-4624-9ee7-64c8a71f799f}</Project>
       <Name>CardGameDataModels</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CardGameHelpers\CardGameHelpers.vbproj">
+      <Project>{0177e435-2590-495a-bbb7-cbeebd25c129}</Project>
+      <Name>CardGameHelpers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
