--- a/CardGameDataModels/CardGameDataModels.vbproj
+++ b/CardGameDataModels/CardGameDataModels.vbproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CardModels\CardModel.vb" />
+    <Compile Include="CardModels\MonsterCardModel.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
